# websocket-chat-app

./: app.py  pyproject.toml
client/: .eslintcache
client/src/components/: Navbar.jsx
src/: __init__.py  app.py  auth.py  config.py  fetch_data.py  routes.py  socketio_controller.py  utils.py
