[tool.poetry]
name = "websocket-chat-app"
version = "0.1.0"
description = "Real time Chat App with Flask-SocketIO and redis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "websocket_chat_app"}]

[tool.poetry.dependencies]
python = "3.9.6"
Flask = "^2.2.3"
bcrypt = "^4.0.1"
redis = "^4.5.1"
flask-session = "^0.4.0"
flask-socketio = "^5.3.2"
flask-cors = "^3.0.10"
eventlet = "^0.33.3"
gunicorn = "^20.1.0"

[tool.poetry.scripts]
start = "gunicorn --worker-class eventlet -w 1 app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
